--- a/GameOfLifeSenik/index.html
+++ b/GameOfLifeSenik/index.html
@@ -8,7 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
 </head>
 <body>
+    <script src="./livingCreature.js"></script>
+    <script src="./index.js"></script>
     <script src="./grass.js"></script>
+    <script src="./zombie.js"></script>
     <script src="./virus.js"></script>
     <script src="./person.js"></script>
     <script src="./grassEater.js"></script>
