--- a/programming3-master/GameOfLifeSenik/client/index.html
+++ b/programming3-master/GameOfLifeSenik/client/index.html
@@ -9,6 +9,11 @@
     <script src="socket.io/socket.io.js"></script>
 </head>
 <body>
+
+    <button id = "winter">  winter</button>
+    <button id = "spring">  spring</button>
+    <button id = "summer">  summer</button>
+    <button id = "autumn">  autumn</button>
     <script src="./script.js"></script>
 </body>
 </html>
