--- a/programming3-master/GameOfLifeSenik/client/index.html
+++ b/programming3-master/GameOfLifeSenik/client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script src="socket.io/socket.io.js"></script>
 </head>
-<body>
 
-    <button id = "winter">  winter</button>
-    <button id = "spring">  spring</button>
-    <button id = "summer">  summer</button>
-    <button id = "autumn">  autumn</button>
+<body>
+    <div>
+        <button id="winter"> winter</button>
+        <button id="spring"> spring</button>
+        <button id="summer"> summer</button>
+        <button id="autumn"> autumn</button>
+        <button id="bomb"> bomb</button>
+    </div>
     <script src="./script.js"></script>
 </body>
+
 </html>
